--- a/p.css
+++ b/p.css
@@ -452,7 +452,7 @@ nav .fa-solid{
 {
     #header
     {
-        background-image: url(images/phone-background.png);
+        background-image: url(images/13.png);
     }
     .header-text
     {
