--- a/p.css
+++ b/p.css
@@ -452,7 +452,11 @@ nav .fa-solid{
 {
     #header
     {
-        background-image: url(images/13.png);
+        width: 100%;
+        height: 100vh; 
+        background-size: cover;
+        background-position:center;
+        background-image: url(images/14.png);
     }
     .header-text
     {
